fixed white space

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,9 @@ body {
 	margin: 0px;
 	padding: 0px;
 }
+
+/* * {
+	background: #000 !important;
+	color: #0f0 !important;
+	outline: solid #f00 1px !important;
+  } */
